# mindpal

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  SOCIAL_VALUE_COVENANT  docker-compose.observability.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  架构-01-交互平面-UI与页面配置.md  架构-02-BFF与统一API请求链路.md  架构设计.md
.github/workflows/: ci.yml
apps/admin-cli/: package.json  tsconfig.tsbuildinfo
apps/api/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/device-agent/: package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/device-agent-rs/: Cargo.toml  README.md
apps/device-agent-rs/.cargo/: config.toml
apps/device-agent-rs/src/: config.rs  env.rs  lib.rs  main.rs  pair.rs  runtime.rs  types.rs
apps/device-agent-rs/src/plugin/: audio.rs  bluetooth.rs  camera.rs  evidence.rs  file_ops.rs  mod.rs  registry.rs  sandbox.rs  sensor_bridge.rs
apps/device-agent-rs/src/security/: access.rs  audit.rs  mod.rs  token.rs
apps/device-agent-rs/src/session/: heartbeat.rs  mod.rs  policy_cache.rs  task_queue.rs
apps/device-agent-rs/src/transport/: http_client.rs  http_poll.rs  mod.rs  ws.rs
apps/runner/: package.json  tsconfig.tsbuildinfo
apps/web/: find-dups.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/worker/: package.json  tsconfig.json  tsconfig.tsbuildinfo
docs-docs/: APPLICATION-SCENARIOS copy.md  USAGE-GUIDE.md
infra/alertmanager/: alertmanager.yml
infra/loki/: loki-config.yml
scripts/: benchmark-performance.ts  boundary-scan.mjs
(+1903 files in other folders)
